# polynomial

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  path_generation.cpp
include/: polynomial.h
test/: CMakeLists.txt  polynomial_test.cpp
